# ToDo365

./: .env.example  .gitignore  404.html  LICENSE  Makefile  README.md  build.sh  index.html  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  sitemap.xml  use-case-diagram.uxf  vercel.json
.github/workflows/: django.yml
docs/: index.md  use-case-diagram.uxf
search/: search_index.json
tests/: tests.py
to_do_365/: asgi.py  urls.py  wsgi.py
to_do_365/settings/: base.py  dev.py  prod.py  render.py  testing.py  vercel.py
to_do_365/wsgi/: wsgi.py
to_do_list_with_calendar/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
to_do_list_with_calendar/migrations/: 0001_initial.py  0002_usuario_validado.py  0003_alter_usuario_email.py  0004_alter_tarefa_usuario.py
