[tool.poetry]
name = "ToDo365"
version = "0.1.0"
description = ""
authors = ["Gabriel-Aguiar"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^4.2.7"
django-allauth = "^0.58.2"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
markdown = "^3.5.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
psycopg2-binary = "^2.9.9"
pymdown-extensions = "^10.4"
python-dotenv = "^1.0.0"
python = "^3.12.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-cors-headers = "^4.3.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pip-audit = "^2.6.1"
pytest = "^7.4.3"
pylint = "^3.0.2"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
